--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -457,20 +457,42 @@
                                 {% endif %}
                               {% endfor %}
                             </div>
-                            <div class="post_detail__review__page">
-                              {% if reviews.has_previous %}
-                                <a href="?page={{reviews.previous_page_number}}" class="post_detail__review__page_previous">이전</a>
-                              {% else %}
-                                <a href="?page={{reviews.previous_page_number}}" class="post_detail__review__page_previous">이전</a>
-                              {% endif %}
-
-                              {% for p in reviews.paginator.page_range %}
-                                <a href="?page={{p}}" class="mx-1">{{p}}</a>
-                              {% endfor %}
-
-                              {% if reviews.has_next %}
-                                <a href="?page={{reviews.next_page_number}}" class="post_detail__review__page_next">다음</a>
-                              {% endif %}
+                            <div class="content-pagination">
+                              <ul class="pagination justify-content-center" style="margin-top: 2rem;">
+                                <!-- 이전페이지 -->
+                                {% if reviews.has_previous %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?&page={{ reviews.previous_page_number }}" style="color:#2253FF;">이전</a>
+                                    <!-- href로 뎁스 설정 -->
+                                </li>
+                                {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link" tabindex="-1" aria-disabled="true" href="#">이전</a>
+                                </li>
+                                {% endif %}
+                                <!-- 페이지리스트 -->
+                                {% for page_number in reviews.paginator.page_range %}
+                                {% if page_number == reviews.number %}
+                                <li class="page-item active" aria-current="page">
+                                    <a class="page-link" href="?&page={{ page_number }}">{{ page_number }}</a>
+                                </li>
+                                {% else %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?&page={{ page_number }}">{{ page_number }}</a>
+                                </li>
+                                {% endif %}
+                                {% endfor %}
+                                <!-- 다음페이지 -->
+                                {% if reviews.has_next %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?&page={{ reviews.next_page_number }}">다음</a>
+                                </li>
+                                {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link" tabindex="-1" aria-disabled="true" href="#">다음</a>
+                                </li>
+                                {% endif %}
+                            </ul>
                             </div>
                           </div>
                           {%endif%}
