--- a/static/css/base.css
+++ b/static/css/base.css
@@ -100,6 +100,9 @@ body {
   display: inline-flex;
   height: 100%;
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .base__dropdown_not {
