--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -76,7 +76,7 @@ main .input {
 
 .input__reg__id input:focus {
   outline: none !important;
-  border: 1px solid blue;
+  border: 1px solid #2253ff;
 }
 
 .input__email input {
@@ -96,7 +96,7 @@ main .input {
 
 .input__email input:focus {
   outline: none !important;
-  border: 1px solid blue;
+  border: 1px solid #2252ff;
 }
 
 .input__reg__pw input {
