--- a/users/templates/users/main.html
+++ b/users/templates/users/main.html
@@ -9,7 +9,10 @@
             <h1>가장 쉬운 방법 'MOCO'</h1>
           </div>
           <div class="container-row__left__content">
-            <p>같이 코딩할 사람들을 찾고 리뷰를 작성할 수 있는 커뮤니티<br>'MOCO'와 함께 해보세요</p>
+            <p>
+              같이 코딩할 사람들을 찾고 리뷰를 작성할 수 있는 커뮤니티<br />'MOCO'와
+              함께 해보세요
+            </p>
           </div>
         </div>
         <div class="container-row__right">
@@ -18,7 +21,7 @@
       </div>
     </div>
   </section>
-  
+
   <section id="introduce">
     <div class="container">
       <div class="container-column">
@@ -27,12 +30,12 @@
         </div>
         <div class="container-column__bottom">
           <div class="container-column__bottom__left">
-            <img src="static/img/moco_logo.png" alt="moco_logo"/>
+            <img src="static/img/moco_logo.png" alt="moco_logo" />
           </div>
           <div class="container-column__bottom__right">
             <p>
-              MOCO는 모각코를 하고 싶은 사람들이 더욱 쉽고 편리하게<br>
-              자신과 맞는 사람들을 만날 수 있도록 도와주는 서비스입니다<br> 
+              MOCO는 모각코를 하고 싶은 사람들이 더욱 쉽고 편리하게<br />
+              자신과 맞는 사람들을 만날 수 있도록 도와주는 서비스입니다<br />
               또한 자신이 자주가는 장소를 게시하고 공유할 수 있습니다.
             </p>
           </div>
@@ -47,14 +50,17 @@
         <div class="container-row__left">
           <h1>모각코 모집 & 후기</h1>
           <p>
-            모각코 모집에서는 자신이 성향의 모임을 찾을 수 있습니다<br>
-            모각코 후기에서는 모집완료된 모각코 게시물의 후기를 작성하고 <br>
+            모각코 모집에서는 자신이 성향의 모임을 찾을 수 있습니다<br />
+            모각코 후기에서는 모집완료된 모각코 게시물의 후기를 작성하고 <br />
             다른 사람들의 후기를 열람할 수 있습니다.
           </p>
           <a href="{% url 'posts:home' %}">바로가기</a>
         </div>
         <div class="container-row__right">
-          <img src="static/img/undraw_shared_workspace_re_3gsu.svg" alt="moco_post">
+          <img
+            src="static/img/undraw_shared_workspace_re_3gsu.svg"
+            alt="moco_post"
+          />
         </div>
       </div>
     </div>
@@ -64,12 +70,15 @@
     <div class="container">
       <div class="container-row">
         <div class="container-row__left">
-          <img src="static/img/undraw_best_place_re_lne9.svg" alt="moco_place">
+          <img
+            src="static/img/undraw_best_place_re_lne9.svg"
+            alt="moco_place"
+          />
         </div>
         <div class="container-row__right">
           <h1>플레이스 후기</h1>
           <p>
-            플레이스에서는 모각코하기 좋은 카페, 스터디룸 등의 장소를 <br>
+            플레이스에서는 모각코하기 좋은 카페, 스터디룸 등의 장소를 <br />
             다른 사람과 공유할 수 있습니다.
           </p>
           <a href="{% url 'place:home' %}">바로가기</a>
@@ -83,7 +92,7 @@
       <div class="container-row">
         <div class="container-row__left">
           <h1>MOCO에 대해 더 자세히 알고 싶다면?</h1>
-          <p>📢 지금 바로 공지사항을 확인해보세요</p> 
+          <p>📢 지금 바로 공지사항을 확인해보세요</p>
         </div>
         <div class="container-row__right">
           <a href="{% url 'notice:home' %}">공지사항 바로가기</a>
@@ -95,8 +104,10 @@
   <section id="footer">
     <div class="container">
       <div class="container-row">
-        <div>010-4663-0939</div>
-        <div>mocoofficial180@gmail.com</div>
+        <div><i class="fa-solid fa-phone"></i> 010-4663-0939</div>
+        <div>
+          <i class="fa-solid fa-envelope"></i> mocoofficial180@gmail.com
+        </div>
         <div>© MOCO. 2022 All rights reserved.</div>
       </div>
     </div>
