--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -23,27 +23,29 @@
             </ul>
           </div>
           <div id="main_detail__top__title">{{post.title}}</div>
-          <div id="main_detail__top__profile">
-            <div id="main_detail__top__img">
-              <span class="content-title__img">
-                {% if post.user.profile_img %}
-                  <div class="profile_img">
-                    <img src="{{post.user.profile_img.url}}" alt="profile_img"></img>
-                  </div>
-                {% else %}
-                  <div class="profile_img">
-                    <img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img>
-                  </div>
-                {% endif %}
-              </span>
+            <div id="main_detail__top__profile">
+              <div id="main_detail__top__img">
+                <span class="content-title__img">
+                  <a href="{% url 'users:profile_view' post.user.id %}">
+                    {% if post.user.profile_img %}
+                    <div class="profile_img">
+                      <img src="{{post.user.profile_img.url}}" alt="profile_img"></img>
+                    </div>
+                    {% else %}
+                    <div class="profile_img">
+                      <img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img>
+                    </div>
+                    {% endif %}
+                  </a>
+                </span>
+              </div>
+              <div id="main_detail__top__name">
+                <span>{{post.user.nickname}}</span>
+              </div>
+              <div id="main_detail__top__time">
+                <span>{{post.published_at|date:"Y. m. d" }}</span>
+              </div>
             </div>
-            <div id="main_detail__top__name">
-              <span>{{post.user.nickname}}</span>
-            </div>
-            <div id="main_detail__top__time">
-              <span>{{post.published_at|date:"Y. m. d" }}</span>
-            </div>
-          </div>
         </div>
         <div id="main_detail__top__right">
           {% if can_revise and post.activation %}
