[fix] css 및 summernote 이슈 해결

--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -106,7 +106,7 @@
             {{post.title}}
           </div>
           <div id="main__info_div__post_left__content">
-            {{post.content|truncatechars:110|striptags}}
+            {{post.content|truncatechars:142|safe}}
           </div>
           <div id="main__info_div__post_left__reaction">
             <i class="fa-solid fa-eye"></i>
