[fix] 공지사항 줄바꿈

--- a/notice/templates/notice/detail.html
+++ b/notice/templates/notice/detail.html
@@ -46,7 +46,7 @@
     </div>
   </div>
   <div class="content-bottom">
-    {{notice.content}}
+    {{notice.content|linebreaks}}
   </div>
 </div>
 <script>
