--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -348,7 +348,7 @@
                                   <div class="review__contents_box__profile">
                                     <div class="review__contents_box__profile_img">
                                       {% if user.profile_img %}
-                                        <img src="{{user.profile_img.url}}" alt="profile_img"></img>
+                                        <img src="{{review.user.profile_img.url}}" alt="profile_img"></img>
                                       {% else %}
                                         <img src="/static/img/moco_symbol.png" alt="profile_img"></img>
                                       {% endif %}
