--- a/posts/templates/reviews/review.html
+++ b/posts/templates/reviews/review.html
@@ -19,8 +19,8 @@
       <div class="review__contents_box__user_info">
         <div class="review__contents_box__profile">
           <div class="review__contents_box__profile_img">
-            {% if user.profile_img %}
-            <img src="{{user.profile_img.url}}" alt="profile_img"></img>
+            {% if review.user.profile_img %}
+            <img src="{{review.user.profile_img.url}}" alt="profile_img"></img>
             {% else %}
             <img src="{% static 'img/moco_symbol.png' %}" alt="profile_img"></img>
             {% endif %}
