[fix] 대댓글 프로필 이미지 오류 수정

--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -257,7 +257,7 @@
                               <span style="font-size:1.25rem; font-weight: 600;">ㄴ</span>
                               <div id="main_detail__comment__contents__img">
                                 {% if recomment.user.profile_img %}
-                                  <img src="{{comment.user.profile_img.url}}" width="45px" alt="profile_img"></img>
+                                  <img src="{{recomment.user.profile_img.url}}" width="45px" alt="profile_img"></img>
                                 {% else %}
                                   <img src="/static/img/moco_symbol.png" width="45px" alt="profile_img"></img>
                                 {% endif %}
