--- a/place/templates/place/base.html
+++ b/place/templates/place/base.html
@@ -5,15 +5,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/f0c26c0bfa.js"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cb7ccec687e9ae05def0b343b1f55486&libraries=services"
-    ></script>
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -84,6 +75,8 @@
         </ul>
       </nav>
     </div>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     {% block content %} {% endblock content %}
+    <script src="https://kit.fontawesome.com/f0c26c0bfa.js" crossorigin="anonymous"></script>
   </body>
 </html>
