--- a/place/templates/place/update.html
+++ b/place/templates/place/update.html
@@ -1,7 +1,7 @@
 {% extends 'place/base.html' %} {% block content %}
 <div class="content">
   <form
-    action="{% url 'place:update' id %}"
+    action="{% url 'place:update' place.id %}"
     method="post"
     enctype="multipart/form-data"
   >
@@ -161,9 +161,6 @@
     window.history.back();
   };
 
-  // 지도
-  var geocoder = new kakao.maps.services.Geocoder();
-
   function sample5_execDaumPostcode() {
     new daum.Postcode({
       oncomplete: function (data) {
@@ -171,25 +168,9 @@
 
         // 주소 정보를 해당 필드에 넣는다.
         document.getElementById("sample5_address").value = addr;
-        // 주소로 상세 정보를 검색
-        geocoder.addressSearch(data.address, function (results, status) {
-          // 정상적으로 검색이 완료됐으면
-          if (status === daum.maps.services.Status.OK) {
-            var result = results[0]; //첫번째 결과의 값을 활용
-
-            // 해당 주소에 대한 좌표를 받아서
-            var coords = new daum.maps.LatLng(result.y, result.x);
-            // 지도를 보여준다.
-            mapContainer.style.display = "block";
-            map.relayout();
-            // 지도 중심을 변경한다.
-            map.setCenter(coords);
-            // 마커를 결과값으로 받은 위치로 옮긴다.
-            marker.setPosition(coords);
-          }
-        });
       },
     }).open();
   }
+
 </script>
 {% endblock content %}
