--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -178,16 +178,16 @@
               </div>
             </div>
             <div id="place_detail__comment__contents__txt__{{comment.id}}">
-              <h1>{{comment.content}}</h1>
+              <h1 id="place_detail__comment__contents__txt__h1__{{comment.id}}">{{comment.content}}</h1>
             </div>
             <div class="place_detail_comment_reply_btn">
-              <button onclick="changeForm2Place({{comment.id}});">답글</button>
+              <button onclick="changeForm2Place({{comment.id}}); return false;">답글</button>
             </div>
             <br />
             <div class="place_detail_commnet_reply_form">
               <div id="place_detail_comment_contents_reply_form__{{comment.id}}"></div>
             </div>
-            <div id="place_detail__comment__contents__reply">
+            <div id="place_detail__comment__contents__reply__{{comment.id}}">
               {% for recomment in comment.comment_set.all %}
               <div class="place_detail__comment__contents__reply_bundle__{{recomment.id}}">
                 <div class="place_detail__reply_top">
@@ -217,10 +217,10 @@
                       </div>
                       <div class="place_detail__comments_dropdown_menu">
                         <div class="place_detail__comments_dropdown_menu_revise">
-                          <button onclick="changeForm4Place({{recomment.id}}, '{{recomment.content}}');">수정</button>
+                          <button onclick="changeForm4Place({{comment.id}}, {{recomment.id}}, '{{recomment.content}}');">수정</button>
                         </div>
                         <div class="place_detail__comments_dropdown_menu_delete">
-                          <button onclick="onClickdeleteRecmtPlace({{recomment.id}});">삭제</button>
+                          <button onclick="onClickdeleteRecmtPlace({{comment.id}},{{recomment.id}});">삭제</button>
                         </div>
                       </div>
                     </div>
@@ -324,12 +324,12 @@ function place_like(id) {
   // 댓글 수정
   const changeFormPlace = (id, content) => {
     const reviseCmtPlace = document.getElementById(`place_detail__comment__contents__txt__${id}`)
-    reviseCmtPlace.innerHTML = `<form action="/comment/revise/${id}" method="post">
+    reviseCmtPlace.innerHTML = `
         {% csrf_token %}
         <textarea
           type="text"
           name="content"
-          id="comment_input_box"
+          id="comment_input_box__${id}"
           cols="30"
           rows="10"
           placeholder="댓글을 입력해주세요."
@@ -343,10 +343,10 @@ function place_like(id) {
   font-weight: 600;
   font-size: 0.9rem;
   margin: 10px 0;">취소</a>
-  <input
-            type="submit"
+  <button
+            type="button"
+            onclick="updateCmt(${id})"
             id="main_detail__comment__btn_revise"
-            value="댓글 수정"
             style="background-color: #2253ff;
   border-style: none;
   border-radius: 0.5rem;
@@ -356,22 +356,37 @@ function place_like(id) {
   font-size: 0.9rem;
   margin: 10px 0;
   margin-right: 10px;"
-          />
-        </div>
-      </form>`
+  >댓글 수정</button>
+        </div>`
+  }
+  const updateCmt = (id) => {
+    const updateContent = document.querySelector(`#comment_input_box__${id}`);
+    const updateValue = updateContent.value;
+    axios({
+      url: "{%url 'comments:revise' %}",
+      method: 'post',
+      data: {
+        id: id,
+        content: updateValue
+      }
+    }).then(function (response) {
+      const { id, content } = response['data'];
+      const reviseCmt = document.getElementById(`place_detail__comment__contents__txt__${id}`);
+      reviseCmt.innerHTML = `<h1 id="place_detail__comment__contents__txt__h1__{{comment.id}}">${content}</h1>`;
+    });
+
   }
 
   // 대댓글 수정
-  const changeForm4Place = (id, content) => {
+  const changeForm4Place = (parentId, id, content) => {
     console.log("click")
     const reviseRecmtPlace = document.querySelector(`.place_detail__comment__contents__reply_bundle__${id}`)
-    console.log(reviseRecmtPlace)
-    reviseRecmtPlace.innerHTML = `<form action="/comment/revise/${id}" method="post">
+    reviseRecmtPlace.innerHTML = `
         {% csrf_token %}
         <textarea
           type="text"
           name="content"
-          id="comment_input_box"
+          id="comment_input_box__${id}"
           cols="30"
           rows="10"
           placeholder="댓글을 입력해주세요."
@@ -385,10 +400,9 @@ function place_like(id) {
   font-weight: 600;
   font-size: 0.9rem;
   margin: 10px 0;">취소</a>
-  <input
-            type="submit"
+  <button
+            type="button"
             id="main_detail__comment__btn_revise"
-            value="대댓글 수정"
             style="background-color: #2253ff;
   border-style: none;
   border-radius: 0.5rem;
@@ -398,10 +412,64 @@ function place_like(id) {
   font-size: 0.9rem;
   margin: 10px 0;
   margin-right: 10px;"
-          />
-        </div>
-      </form>`
+  onclick="updateRecmt(${parentId}, ${id})"
+  >대댓글 수정</button>
+        </div>`
   }
+
+  const updateRecmt = (parentId, id) =>{
+    const updateContent = document.querySelector(`#comment_input_box__${id}`);
+    const updateValue = updateContent.value;
+
+    axios({
+      url: "{%url 'comments:revise' %}",
+      method: 'post',
+      data: {
+        id: id,
+        content: updateValue
+      }
+    }).then(function (response) {
+      const {id, content} = response['data'];
+      const reviseCmt = document.querySelector(`.place_detail__comment__contents__reply_bundle__${id}`);
+      reviseCmt.innerHTML = `
+        <div class="place_detail__reply_top">
+          <div class="place_detail__comment__contetns__profile_userinfo">
+            <span style="font-size:1.25rem; font-weight: 600;">ㄴ </span>
+            <div id="place_detail__comment__contents__img">
+              {% if recomment.user.profile_img %}
+              <img src="{{recomment.user.profile_img.url}}" width="45px" alt="profile_img"></img>
+              {% else %}
+              <img src="/static/img/moco_symbol.png" width="45px" alt="profile_img"></img>
+              {% endif %}
+            </div>
+            <div id="place_detail__comments__contents__info">
+              <div id="place_detail__comments__contents__name">
+                <span>{{recomment.user.nickname}}</span>
+              </div>
+              <div id="place_detail__comments__contents__time">
+                <span>{{recomment.published_at|date:"Y. m. d" }}</span>
+              </div>
+            </div>
+          </div>
+          <div class="place_detail__comments__contents__options">
+            <div class="place_detail__comments_revise_delete_btn">
+              <div class="place_detail__comments_dropdown_btn">
+                <i class="fa-solid fa-ellipsis fa-lg" style="color: #BFBFBF"></i>
+              </div>
+              <div class="place_detail__comments_dropdown_menu">
+                <div class="place_detail__comments_dropdown_menu_revise">
+                  <button onclick="changeForm4Place(${parentId}, ${id}, '${content}');">수정</button>
+                </div>
+                <div class="place_detail__comments_dropdown_menu_delete">
+                  <button onclick="onClickdeleteRecmtPlace(${parentId}, ${id});">삭제</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="place_detail__reply_txt">${content}</div>
+      `
+  })}
 
   // 대댓글
   const changeForm2Place = (id) => {
@@ -418,54 +486,42 @@ function place_like(id) {
   }
 
   //대댓글 삭제
-  const recmtDeletePlace = new XMLHttpRequest();
-  const onClickdeleteRecmtPlace = (id) => {
-      const url = "/comment/delete";
-      recmtDeletePlace.open("POST",url,true);
-      recmtDeletePlace.setRequestHeader(
-          "Content-Type",
-          "application/x-www-form-urlencoded"
-      );
-      recmtDeletePlace.send(JSON.stringify({'id':id}));
-  }
-  recmtDeletePlace.onreadystatechange = () => {
-      if (recmtDeletePlace.readyState === XMLHttpRequest.DONE){
-          if(recmtDeletePlace.status < 400){
-              const {id, len} = JSON.parse(recmtDeletePlace.response);
-              console.log(id, len)
-              const topdomRcmtPlace = document.getElementById("place_detail__comment__contents__reply");
-              const deletedomRcmtPlace = document.querySelector(`.place_detail__comment__contents__reply_bundle__${id}`)
-              topdomRcmtPlace.removeChild(deletedomRcmtPlace);
-              const cmtLen = document.getElementById('main_detail__comment_num')
-              cmtLen.innerHTML = len
-          }
+  const onClickdeleteRecmtPlace = (parentId, id) => {
+    axios({
+      url: "{%url 'comments:delete' %}",
+      method: 'post',
+      data: {
+        id: id
       }
+    }).then(function (response){
+      const {id, len} = response['data'];
+      const topdomRcmtPlace = document.getElementById(`place_detail__comment__contents__reply__${parentId}`);
+      const deletedomRcmtPlace = document.querySelector(`.place_detail__comment__contents__reply_bundle__${id}`)
+      topdomRcmtPlace.removeChild(deletedomRcmtPlace);
+      const cmtLen = document.getElementById('main_detail__comment_num')
+      cmtLen.innerHTML = len
+    })
   }
 
   // 댓글 삭제
-  const cmtDeletePlace = new XMLHttpRequest();
   const onClickdeletePlace = (id) => {
-      const url = "/comment/delete";
-      cmtDeletePlace.open("POST",url,true);
-      cmtDeletePlace.setRequestHeader(
-          "Content-Type",
-          "application/x-www-form-urlencoded"
-      );
-      cmtDeletePlace.send(JSON.stringify({'id':id}));
-  }
-  cmtDeletePlace.onreadystatechange = () => {
-      if (cmtDeletePlace.readyState === XMLHttpRequest.DONE){
-          if(cmtDeletePlace.status < 400){
-              const {id, len} = JSON.parse(cmtDeletePlace.response);
-              const topdomPlace = document.getElementById("place_detail__comment__contents");
-              const deletedomPlace = document.querySelector(`.place_detail__comment__each__contents_div__${id}`);
-              console.log(deletedomPlace)
-              topdomPlace.removeChild(deletedomPlace);
-              const cmtLen = document.getElementById('main_detail__comment_num')
-              cmtLen.innerHTML = len
-          }
+    axios({
+      url: "{%url 'comments:delete' %}",
+      method: 'post',
+      data: {
+        id: id
       }
-  }
+    }).then(function (response){
+        const {id, len} = response['data'];
+        const topdomPlace = document.getElementById("place_detail__comment__contents");
+        const deletedomPlace = document.querySelector(`.place_detail__comment__each__contents_div__${id}`);
+        console.log(deletedomPlace)
+        topdomPlace.removeChild(deletedomPlace);
+        const cmtLen = document.getElementById('main_detail__comment_num')
+        cmtLen.innerHTML = len
+    });
+  };
+  
 </script>
 
 {% endblock %}
