--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -238,7 +238,7 @@
 						<div class="main_detail_commnet_reply_form">
 							<div id="main_detail_comment_contents_reply_form__{{comment.id}}"></div>
 						</div>
-						<div id="main_detail__comment__contents__reply">
+						<div id="main_detail__comment__contents__reply__{{comment.id}}">
 							{% for recomment in comment.comment_set.all %}
 							<div class="main_detail__comment__contents__reply_bundle__{{recomment.id}}" style="display: flex; justify-content: space-between">
 								<div>
@@ -270,10 +270,10 @@
 											</div>
 											<div class="main_detail__comments_dropdown_menu">
 												<div class="main_detail__comments_dropdown_menu_revise">
-													<button onclick="changeReCmtForm({{recomment.id}}, '{{recomment.content}}');">수정</button>
+													<button onclick="changeReCmtForm({{comment.id}}, {{recomment.id}}, '{{recomment.content}}');">수정</button>
 												</div>
 												<div class="main_detail__comments_dropdown_menu_delete">
-													<button onclick="onClickdeleteRecmt({{recomment.id}});">삭제</button>
+													<button onclick="onClickdeleteRecmt({{comment.id}},{{recomment.id}});">삭제</button>
 												</div>
 											</div>
 										</div>
@@ -621,7 +621,7 @@
 		};
 
 		// 대댓글 수정
-		const changeReCmtForm = (id, content) => {
+		const changeReCmtForm = (parentId, id, content) => {
 			const reviseRecmt = document.querySelector(`.main_detail__comment__contents__reply_bundle__${id}`);
 			reviseRecmt.innerHTML = `
 		      {% csrf_token %}
@@ -635,11 +635,11 @@
 		      >${content}</textarea>
 		      <div id="main_detail__comment__btnplace">
 		        <a href="{% url 'posts:detail' post.id %}" style="background-color: #bfbfbf;border-style: none;border-radius: 0.5rem;color: white;padding: 1rem 2rem;font-weight: 600;font-size: 0.9rem;margin: 10px 0;">취소</a>
-				  <button type="submit" id="main_detail__comment__btn_revise" value="대댓글 수정" onclick="updateReCmt(${id})" style="background-color: #2253ff;border-style: none;border-radius: 0.5rem;color: white;padding: 1rem 2rem;font-weight: 600;font-size: 0.9rem;margin: 10px 0;margin-right: 10px;">대댓글 수정</button>
+				  <button type="submit" id="main_detail__comment__btn_revise" value="대댓글 수정" onclick="updateReCmt(${parentId}, ${id})" style="background-color: #2253ff;border-style: none;border-radius: 0.5rem;color: white;padding: 1rem 2rem;font-weight: 600;font-size: 0.9rem;margin: 10px 0;margin-right: 10px;">대댓글 수정</button>
 		      </div>
 		  `;
 		};
-		const updateReCmt = (id) => {
+		const updateReCmt = (parentId, id) => {
 			const updateContent = document.querySelector(`#comment_input_box__${id}`);
 			const updateValue = updateContent.value;
 
@@ -675,28 +675,26 @@
 		          </div>
 		          <div>
 		            <div class="main_detail__comments__contents__options">
-		              {% if recomment.user == request.user %}
 		              <div class="main_detail__comments_revise_delete_btn">
 		                <div class="main_detail__comments_dropdown_btn">
 		                  <i class="fa-solid fa-ellipsis fa-lg" style="color: #bfbfbf"></i>
 		                </div>
 		                <div class="main_detail__comments_dropdown_menu">
 		                  <div class="main_detail__comments_dropdown_menu_revise">
-		                    <button onclick="changeReCmtForm({{recomment.id}}, '{{recomment.content}}');">수정</button>
+		                    <button onclick="changeReCmtForm(${parentId}, ${id}, '${content}');">수정</button>
 		                  </div>
 		                  <div class="main_detail__comments_dropdown_menu_delete">
-		                    <button onclick="onClickdeleteRecmt({{recomment.id}});">삭제</button>
+		                    <button onclick="onClickdeleteRecmt(${parentId}, ${id});">삭제</button>
 		                  </div>
 		                </div>
 		              </div>
-		              {% endif%}
 		            </div>
 		          </div>`;
 			});
 		};
 
 		//대댓글 삭제
-		const onClickdeleteRecmt = (id) => {
+		const onClickdeleteRecmt = (parentId, id) => {
 			axios({
 				url: "{%url 'comments:delete' %}",
 				method: 'post',
@@ -705,7 +703,7 @@
 				}
 			}).then(function (response) {
 				const { id, len } = response['data'];
-				const topdomRcmt = document.getElementById('main_detail__comment__contents__reply');
+				const topdomRcmt = document.getElementById(`main_detail__comment__contents__reply__${parentId}`);
 				const deletedomRcmt = document.querySelector(`.main_detail__comment__contents__reply_bundle__${id}`);
 				topdomRcmt.removeChild(deletedomRcmt);
 				const cmtLen = document.getElementById('main_detail__comment_num');
